--- a/src/styles.css
+++ b/src/styles.css
@@ -75,3 +75,17 @@ body {
     max-width: 100%;
     height: auto;
 }
+
+
+button {
+    background-color: green;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+}
+
+button:hover {
+    background-color: yellow;
+    color: black;
+}
