--- a/src/styles.css
+++ b/src/styles.css
@@ -3,21 +3,26 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial;
-    color: darkgrey;
+    color: rgb(169,169,169);
     flex-direction: column;
 }
 
 .container {
-    margin: 20px;
+    margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.container img{
+    width: 100%;
+    height: auto;
+}
+
 .nav-bar {
     width: 100%;
     position: sticky;
-    background-color: white;
+    background-color: rgb(255,255,255);
     box-shadow: rgb(0 0 0 / 12%) 0 1px 8px;
     display: flex;
     justify-content: space-between;
@@ -38,6 +43,7 @@ body {
 .properties {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
@@ -50,10 +56,10 @@ body {
 
 .footer {
     width: 100%;
-    background-color: lightcoral;
+    background-color: rgb(240,128,128);
     text-align: center;
-    padding: 30px;
-    color: white;
+    padding: 30px 0;
+    color: rgb(255,255,255);
 }
 
 .review-card {
@@ -68,7 +74,7 @@ body {
 .break {
     height: 1px;
     width: 90%;
-    background-color: coral;
+    background-color: rgb(255,127,80);
 }
 
 .card img {
@@ -78,7 +84,7 @@ body {
 
 
 .reviews-button {
-    background-color: green;
+    background-color: rgb(0,128,0);
     color: white;
     border-radius: 5px;
     border: none;
@@ -86,5 +92,5 @@ body {
 }
 
 .reviews-button:hover {
-    background-color: goldenrod;
+    background-color: rgb(218,165,32);
 }
